[project]
name = "causalml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "patsy>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
]
